<resources>
    <string name="app_name">Evenmate</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="login_button">Login button</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="home">Home</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="street_number">Street number</string>
    <string name="phone">Phone</string>
    <string name="register_button">Register</string>
    <string name="register">Register</string>
    <string name="upload_image">Upload image</string>
    <string name="services_and_products">SERVICES AND PRODUCTS</string>
    <string name="events">EVENTS</string>
    <string name="events_menu">Events</string>
    <string name="back">BACK</string>
    <string name="forward">FORWARD</string>
    <string name="search">Search…</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="chat">Chat</string>
    <string name="location">"Location: "</string>
    <string name="category">"Category: "</string>
    <string name="date">"Date: "</string>
    <string name="price">"Price"</string>
    <string name="rating">"Rating: "</string>
    <string name="max_guests">"Max guests: "</string>
    <string name="unselected_favorite">"UN-SELECTED A FAVORITE"</string>
    <string name="selected_favorite">"SELECTED A FAVORITE"</string>
    <string name="new_page">"NEW PAGE"</string>
    <string name="providerServicesProductsNavbarItem">Your Products and Services</string>
    <string name="sign_up_as_product_and_service_provider">Sign up as Product and Service Provider    </string>
    <string name="company_info">COMPANY INFO</string>
    <string name="company_email">Company email</string>
    <string name="company_name">Company name</string>
    <string name="your_services_and_products">Your Services and Products</string>
    <string name="no_services_or_products_yet">No services or products yet</string>
    <string name="click_the_button_to_add_your_first_service">Click the + button to add your first service</string>
    <string name="event_types">Event types</string>
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="recommended_ps_categories"><![CDATA[Recommended P&S Categories : ]]></string>
    <string name="save">SAVE</string>
    <string name="create_agenda">CREATE AGENDA</string>
    <string name="name">Name</string>
    <string name="no_event_types">No event types</string>
    <string name="add_an_event_type">ADD AN EVENT TYPE</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="select_categories">Select Categories</string>
    <string name="image">image</string>
    <string name="company_images">Company images</string>
    <string name="activate_account_message">Registration successful! Please check your email to activate your account.</string>
    <string name="your_account_is_not_activated_please_activate">Your account is not activated. Please activate it using the link sent to your email.</string>
    <string name="your_account_is_not_activated">Your account is not activated.</string>
    <string name="invalid_credentials">Invalid credentials. Please try again</string>
    <string name="login_failed">Login failed. Please check your information and try again</string>
    <string name="login_failed_please_try_again_later">Login failed. Please try again later</string>
    <string name="network_error">"Network error: "</string>
    <string name="email_already_exists">Email already exists</string>
    <string name="account_already_exists_email">An account with this email address already exists</string>
    <string name="company_already_exists">Company with the given email or name already exists</string>
    <string name="registration_failed_check_your_information">Registration failed. Please check your information and try again</string>
    <string name="registration_failed_try_again">Registration failed. Please try again later</string>
    <string name="registration_successful">Registration successful! Please check your email to activate your account.</string>
    <string name="registration_failed">"Registration failed: "</string>
    <string name="company_city">Company city</string>
    <string name="company_street">Company street</string>
    <string name="company_street_number">Company street number</string>
    <string name="company_phone">Company phone</string>
    <string name="company_description">Company description</string>
    <string name="select_items">Select Items</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="add_an_event">ADD AN EVENT</string>
    <string name="no_events">No events</string>
    <string name="calendar">Calendar</string>
    <string name="favorite_ps">Favorite products and services</string>
    <string name="your_events_up">YOUR EVENTS</string>
    <string name="your_events">Your events</string>
    <string name="your_ps">Your products and services</string>
    <string name="favorite_events">Favorite events</string>
    <string name="favorite_events_up">YOUR FAVORITE EVENTS</string>
    <string name="address">Address</string>
    <string name="type">Type:</string>
    <string name="max_attendees">Max attendees</string>
    <string name="country">Country</string>
    <string name="switch_on_if_the_event_is_private"><![CDATA[Switch on if the event is private        ]]></string>
    <string name="choose_a_type">Choose a type</string>
    <string name="select_date">Select Date</string>
    <string name="blank" />
    <string name="selected_date">Selected date</string>
    <string name="choose_an_event_type">Choose an event type</string>
    <string name="company_country">Company country</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="delete">Delete</string>
    <string name="delete_notification">Delete notification</string>
    <string name="invitations">Invitations</string>
    <string name="add_invite">Add Invite</string>
    <string name="enter_contact_email">Enter contact email</string>
    <string name="delete_dialog_title">Delete Confirmation</string>
    <string name="delete_dialog_text">Are you sure you want to delete this? This action cannot be undone.</string>
    <string name="your_profile">Your profile</string>
    <string name="company_information">Company Information</string>
    <string name="upload_images">Upload images</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change password</string>
    <string name="filter_and_sort">FILTER AND SORT</string>
    <string name="select_types">Select Types</string>
    <string name="select_organizers">Select Organizers</string>
    <string name="select_location">Select Location</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="reset">RESET</string>
    <string name="apply">APPLY</string>
    <string name="show_past_events">Show Past Events</string>
    <string name="price_range">Price Range</string>
    <string name="select_category">Select category</string>
    <string name="select_event_type">Select Event Type</string>
    <string name="select_provider">Select Provider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_products">Your products</string>
    <string name="favorite_products">Favorite products</string>
    <string name="add_a_product">ADD PRODUCT</string>
    <string name="no_products">No products</string>
    <string name="priceAfterDiscount">"After discount: "</string>
    <string name="new_category_name">New Category Name</string>
    <string name="new_category_description">New Category Description</string>
    <string name="cancel_suggestion">Cancel suggestion</string>
    <string name="suggest_new_category">Suggest</string>
    <string name="pricing">Pricing</string>
    <string name="product_is_visible">Product is Visible</string>
    <string name="product_is_available">Product is Available</string>
    <string name="can_t_find_the_category_you_want_you_can_suggest_a_new_one">Can\'t find the category you want? You can suggest a new one</string>
    <string name="images">Images</string>
    <string name="open_chat">Open chat</string>
    <string name="location_hint">Location</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="actions">Actions</string>
    <string name="add_new_agenda_item">Add New Agenda Item</string>
    <string name="start_time_hh_mm">Start Time (HH:mm)</string>
    <string name="end_time_hh_mm">End Time (HH:mm)</string>
    <string name="add_agenda_item">Add Agenda Item</string>
    <string name="edit_agenda">EDIT AGENDA</string>
    <string name="chat_type_message">Type a message</string>
    <string name="send_message">Send</string>
    <string name="chat_name">Chat Name</string>
    <string name="sender">Sender</string>
    <string name="message_content">Message content</string>
    <string name="category_name">Category Name</string>
    <string name="select">Select</string>
    <string name="add_category">Add Category</string>
    <string name="category_description">Category Description</string>
    <string name="category_name_required">Category name is required</string>
    <string name="select_category_required">Category is required</string>
    <string name="category_management">Category Management</string>
    <string name="category_suggestions">CATEGORY SUGGESTIONS</string>
    <string name="approve">Approve</string>
    <string name="update_asset_category">Update Asset Category</string>
    <string name="price_required">Price is required</string>
    <string name="discount_required">Discount is required</string>
    <string name="discount">Discount</string>
    <string name="discounted_price">Discounted Price</string>
    <string name="price_list">Price List</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="page_1">Page 1</string>
    <string name="organizer">Organizer</string>
    <string name="favorite">Favorite</string>
    <string name="download_pdf">Download PDF</string>
    <string name="agenda">Agenda</string>
    <string name="reviews">Reviews</string>
    <string name="budget">Budget</string>
    <string name="no_event_to_display">No event to display</string>
    <string name="i_m_coming">I\'m coming</string>
    <string name="available">Available</string>
    <string name="your_services">Your Services</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="event_type">Event Type</string>
    <string name="clear">Clear</string>
    <string name="select_event">Select Event</string>
    <string name="duration_amp_start_time"><![CDATA[Duration & Start Time]]></string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="confirm">Confirm</string>
</resources>