<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/HomepageFragment"
            android:title="@string/home"
            android:orderInCategory="100" />
        <item android:id="@+id/eventsFragment"
            android:title="@string/events_menu"
            android:orderInCategory="200" />
        <item android:id="@+id/favoriteEventsFragment"
            android:orderInCategory="300"
            android:title="@string/favorite_events" />
        <item android:id="@+id/yourEventsFragment"
            android:title="@string/your_events"
            android:orderInCategory="400" />
        <item android:id="@+id/profile"
            android:title="@string/your_profile"
            android:orderInCategory="500"/>
        <item android:id="@+id/CalendarFragment"
            android:title="@string/calendar"
            android:orderInCategory="600"/>
        <item android:id="@+id/FavoriteProductServiceFragment"
            android:title="@string/favorite_ps"
            android:orderInCategory="700"/>
    </group>
</menu>