<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/create_agenda"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <TextView android:text="@string/name" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
            <TextView android:text="@string/description" android:layout_weight="2" android:layout_width="0dp" android:layout_height="wrap_content"/>
            <TextView android:text="@string/location_hint" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
            <TextView android:text="@string/start" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
            <TextView android:text="@string/end" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
            <TextView android:text="@string/actions" android:layout_weight="1" android:layout_width="0dp" android:layout_height="wrap_content"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/agendaRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"/>

        <TextView
            android:text="@string/add_new_agenda_item"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputAgendaName"
            android:hint="@string/name"
            android:autofillHints="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputAgendaDescription"
            android:autofillHints="@string/description"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputAgendaLocation"
            android:hint="@string/location_hint"
            android:autofillHints="@string/location_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputStartTime"
            android:hint="@string/start_time_hh_mm"
            android:autofillHints="@string/start_time_hh_mm"
            android:inputType="time"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/inputEndTime"
            android:hint="@string/end_time_hh_mm"
            android:autofillHints="@string/end_time_hh_mm"
            android:inputType="time"
            android:maxLength="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnAddAgendaItem"
            android:text="@string/add_agenda_item"
            style="@style/GreenRoundedButton"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_event"
            style="@style/PurpleFilledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="30dp"
            android:text="@string/save" />

    </LinearLayout>
</ScrollView>
