<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/price_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/price_list_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/price"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/price_list_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/discount"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/price_list_price_after_discount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/discounted_price"
        android:gravity="end"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>

    <TextView
        android:id="@+id/price_list_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/purple"
        android:paddingStart="12dp"
        android:clickable="true"
        android:focusable="true"/>

</LinearLayout>

